# hermes-headroom

./: .env.example  .gitignore  LICENSE  README.md  install.sh  patch_script.py  pyproject.toml  setup.sh  test_mcp_servers.py  uninstall.sh
lib/: common.sh  configure_hermes.py  headroom-proxy.service.in  headroom_wrapper.py  register_pricing.py  test_salt.py
